--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,16 +20,36 @@
 
 title: SKODJOB
 description: >- # this means to ignore newlines until "baseurl:"
-  Skodjob project blog
+  Kubernetes Testing, Automation & Performance Engineering -
+  Discover our journey from testing individual features to building comprehensive
+  automation hubs, performance testing frameworks, and tools that simulate real-world environments.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  skodjob
+url: "https://www.skodjob.io" # the base hostname & protocol for your site
+github_username: skodjob
+
+# Social links
+social:
+  - platform: github
+    user_url: "https://github.com/skodjob"
 
 # Build settings
 theme: minima
-markdown: GFM
+markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    block:
+      line_numbers: false
+      start_line: 1
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
+
+# GitHub Pages settings
+remote_theme: null
 
 minima:
   skin: auto
